# CCDS-project-INST414

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
models/: sprint3_model.ipynb
notebooks/: sprint2_explotary_data_analyst-checkpoint.ipynb
src/data/: cleaning code.py  global_food_wastage_dataset_cleaned.csv
